--- a/src/pages/order.css
+++ b/src/pages/order.css
@@ -12,7 +12,7 @@
   align-items: center;
 }
 
-.product-image,img {
+.product-image img {
   width: 150px;
   height: 150px;
   /* background-color: lightgray; */
