--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -13,7 +13,7 @@
   
     & .login-Form {
       & label {
-        display: block;
+        display: flex;
         margin: 2.4rem 0 0.8rem 0;
         text-transform: capitalize;
       }
@@ -53,3 +53,9 @@
   .validation-error{
     color: red;
   }
+
+  .forgotPassword{
+    display: flex;
+    justify-content: center;
+  }
+  
